[gd_scene load_steps=2 format=3 uid="uid://bktq3nj15vfww"]

[ext_resource type="Script" path="res://interactions/interactive area/interactive_area.gd" id="1_db5c0"]

[node name="InteractiveArea" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_db5c0")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
